--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,17 @@
     <div id="navbar">
     </div>
     <script src="../static/js/nav.js"></script>
+    <div class="home-background">
+        <div id="home-text-overlay">
+            <h1>Welcome to WeatherML!</h1>
+            <p>Your educational source for weather-related machine learning algorithms.</p>
+            <br>
+            <p>Visit the models sections to begin your journey!</p>
+        </div>
+    </div>
+
+    </div id="sources">
+
 </body>
 
 </html>
