--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -2,12 +2,13 @@ body,
 html {
     margin: 0;
     padding: 0;
-    font-family: "Traffolight";
+    font-family: "Traffolight", Helvetica;
 }
 
 @font-face {
     font-family: "Traffolight";
-    src: url("../fonts/Traffolight.otf")
+    src: url("../fonts/Traffolight.otf");
+    unicode-range: U+0030-0039, U+0041-005A, U+0061-007A;
 }
 
 .top-nav {
@@ -25,7 +26,7 @@ html {
         overflow: hidden;
         text-align: center;
         padding-inline-start: 0;
-        
+
 
 
         li {
@@ -103,59 +104,139 @@ html {
 }
 
 .model-header-gone {
-    height: 1000px;
+    height: 0px;
 }
 
 #panel-container {
     display: flex;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: row;
 }
+
+
+
 
 .left-panel,
 .right-panel {
-    flex: 1;
-    height: 100%;
     display: flex;
+    flex-direction: column;
+    width: 50%;
     align-items: flex-start;
-    justify-content: left;
     padding: 20px;
-    max-width: 50%;
+
+    .content {
+        width: 100%;
+        max-width: 100%;
+
+        h1 {
+            text-align: center;
+        }
+
+        h2 {
+            font-size: 18px;
+            text-align: left;
+        }
+    }
 }
 
 .left-panel {
     background-color: #f0f0f0;
+    justify-content: left;
+
+    .content {
+
+        text-align: left;
+
+        p {
+            font-size: 15px;
+            line-height: 1.5;
+            text-indent: 20px;
+        }
+
+        li {
+            font-size: 15px;
+        }
+
+
+
+    }
 }
+
 
 .right-panel {
     background-color: #ffffff;
+    text-align: center;
+    position: sticky;
+    top: 0;
+    height: 100%;
+
+    .content {
+        .iframe-wrapper {
+            position: relative;
+            width: 100%;
+            padding-top: 56.25%;
+            overflow: hidden;
+
+            iframe {
+                margin: auto;
+                padding: 0;
+                position: relative;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+
+    }
 }
 
-.content {
+.no-data-placeholder {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #666;
+    background-color: #f2f2f2;
+    border: 1px dashed #ccc;
+    padding: 20px;
+    margin: 20px;
+
+    #nd1 {
+        height: 1000px;
+    }
+
+    #nd2 {
+        height: 0px;
+    }
+}
+
+.selector-button {
+    margin-top: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+
+.button-container {
+    display: flex;
+    margin-top: 20px;
     width: 100%;
-    max-width: 100%;
-    text-align: left;
-
-    p {
-        font-size: 15px;
-        line-height: 1.5;
-        text-indent: 20px;
-    }
-
-    h2 {
-        text-align: center;
-    }
+    justify-content: center;
 }
-
-
 
 pre {
     background-color: #383636;
     padding: 0;
     border-radius: 5px;
-    border: 1px solid #ddd;
+    border: 1px solid 
+    ddd;
     overflow-x: scroll;
 }
 
@@ -179,19 +260,7 @@ img {
     padding: 5 0;
 }
 
-#selector-button {
-    position: relative;
-    margin-top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
+
 
 #next-button:hover {
     background-color: #0056b3;
