--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -235,8 +235,7 @@ pre {
     background-color: #383636;
     padding: 0;
     border-radius: 5px;
-    border: 1px solid 
-    ddd;
+    border: 1px solid;
     overflow-x: scroll;
 }
 
