Changed graph library to Plotly

--- a/app/templates/models.html
+++ b/app/templates/models.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <html lang="en">
     <link href="../static/css/style.css" type="text/css" rel="stylesheet" />
     <link href="../static/css/prism.css" rel="stylesheet" />
