--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -170,20 +170,25 @@ html {
     height: 100%;
 
     .content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+
         .iframe-wrapper {
             position: relative;
-            width: 100%;
-            padding-top: 56.25%;
+            width: 80%;
+            aspect-ratio: 1 / 1;
+            display: flex;
+            justify-content: center;
             overflow: hidden;
 
             iframe {
-                margin: auto;
                 padding: 0;
                 position: relative;
-                top: 0;
-                left: 0;
                 width: 100%;
-                height: 100%;
+                aspect-ratio: 1 / 1;
             }
         }
 
