Added about page and finished LSTM

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <html lang="en">
-    <link href="../static/css/style.css" type="text/css" rel="stylesheet" />
+    <title>Contact Page</title>
+    <link href="../static/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <div id="navbar">
     </div>
     <script src="../static/js/nav.js"></script>
-    <h1>Contact</h1>
+    <main>
+        <div class=contact>
+            <h1>Contact Information</h1>
+            <div class="contact-item">
+                <p id="name"> Name: Leif Rogers</p>
+            </div>
+            <div class="contact-item">
+                <p id="email">Email: leifrrogers@gmail.com</p>
+            </div>
+            <div class="contact-row">
+                <label for="github">GitHub: </label>
+                <p id="github"><a href="https://github.com/leifsternyc">leifsternyc</a></p>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
