--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -273,7 +273,28 @@ img {
     padding: 5 0;
 }
 
+.contact {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: #93d9e9;
+    height: 100vh;
 
+    p,
+    label {
+        font-size: 20px;
+    }
+
+    label {
+        margin-right: 10px;
+    }
+
+    .contact-row {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+}
 
 #next-button:hover {
     background-color: #0056b3;
